feat(assets): upload base function
